# rheods

./: .gitignore  Cargo.toml  NOTICE  README.md
bench/: Dockerfile  README.md  bench-keyed.sh
bench/bun/: README.md  bench-bun-base.sh  bench-bun-keyed.sh  results-bun-base.json  results-bun-keyed-uncapped.json  results-bun-keyed.json
bench/results/: results-baseline.json  results-final.json  results-keyed-fast.json  results-with-index-keyed.json
client-verify/: README.md  package.json  run.mjs
crates/ds-index/: Cargo.toml
crates/ds-index/src/: accumulator.rs  fingerprint.rs  lib.rs  run.rs  store.rs
docs/: integration-points.md  plan.md  write-path-design.md
patches/: README.md  keying-handlers.patch  keying-key_journal-new.patch  keying-main.patch  keying-store.patch  keying-wal-e2e_tests.patch
scripts/: vendor-upstream.sh  verify-patches.sh
